--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -35,12 +35,12 @@ const middleschool_desc = 'An outside of school activity which I do is helping o
                 </p>
             </div>
             
-            <img src="../../public/about.png" alt="" width="400">
+            <img src="/about.png" alt="" width="400">
         </section>
 
 
         <section class="programming">
-            <img src="../../public/kid.png" alt="" width="400">
+            <img src="/kid.png" alt="" width="400">
 
             <div>
                 <h1>My <span class="grad">Programming</span> Journey </h1>
@@ -59,7 +59,7 @@ const middleschool_desc = 'An outside of school activity which I do is helping o
             </div>
         </section>
 
-        <section class="../../public/biking">
+        <section class="biking">
             <div>
                 <h1>My <span class="grad">Biking</span> joureny</h1>
                 <p>
@@ -75,20 +75,20 @@ const middleschool_desc = 'An outside of school activity which I do is helping o
                 </p>
             </div>
 
-            <img src="../../public/bike.png" alt="" width="400">
+            <img src="/bike.png" alt="" width="400">
         </section>
 
         <section class="school">
             <h1 class="grad" >School activites</h1>
             <div class="container">
-                <ActivityCard title="Seahawk Cyber" description={seahawk_desc} image="../../public/seahawkcyber.png"/>
-                <ActivityCard title="ProgJam" description={progjam_desc} image="../../public/progjam.png"/>
-                <ActivityCard title="Middle School Club" description={middleschool_desc} image="../../public/midschool.png"/>
+                <ActivityCard title="Seahawk Cyber" description={seahawk_desc} image="/seahawkcyber.png"/>
+                <ActivityCard title="ProgJam" description={progjam_desc} image="/progjam.png"/>
+                <ActivityCard title="Middle School Club" description={middleschool_desc} image="/midschool.png"/>
             </div>
         </section>
 
         <section class="linux">
-            <img src="../../public/linux.png" alt="" width="400">
+            <img src="/linux.png" alt="" width="400">
 
             <div>
                 <h1>My <span class="grad">Linux</span> Journey </h1>
@@ -127,7 +127,6 @@ const middleschool_desc = 'An outside of school activity which I do is helping o
     }
 
     .linux img {
-        transform: rotate(-5deg);
     }
 
     .linux {
