added blog stuff

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -8,8 +8,8 @@ import '../styles/navbar.css'
 
     <nav class="navlinks">
         <NavLink class="navlink" href="/about">About</NavLink>
+        <NavLink class="navlink" href="/blog">Blog</NavLink>
         <NavLink class="navlink" href="https://github.com/maytees">Github</NavLink>
-        <NavLink class="navlink" href="/construction">Work</NavLink>
         <NavLink class="navlink" href="https://secret.matees.net">Secret</NavLink>
     </nav>
 </navbar>
