created new blog post

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,7 +24,7 @@ const middleschool_desc = 'An outside of school activity which I do is helping o
             <div>
                 <h1>The <span class="grad">Poem</span> about me</h1>
                 <p>
-                    Hi, I'm <span class="grad">Maytham</span>, and I love to code <br>
+                    Hi, I'm <span class="grad">matees</span>, and I love to code <br>
                     I also enjoy <span class="grad">biking</span>, <span class="grad">badminton</span>, and trying new food on the go <br>
                     Web development may not be my <span class="grad">cup of tea</span> <br>
                     But I know it's important for my <span class="grad">future</span>, can't you see? <br>
@@ -61,7 +61,7 @@ const middleschool_desc = 'An outside of school activity which I do is helping o
 
         <section class="biking">
             <div>
-                <h1>My <span class="grad">Biking</span> joureny</h1>
+                <h1>My <span class="grad">Biking</span> Journey</h1>
                 <p>
                     I'm not sure when I learned to ride a <span class="grad">bike</span> <br>
                     But I got a ton of <span class="grad">injuries</span>, it wasn't easy, that's for sure <br>
