--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,10 +18,11 @@ import Footer from '../components/Footer.astro';
 
 		<section class="main">
 			<div>
-				<h1>Hello, I am <span class="grad">Maytham Ajam</span></h1>
+				<h1>Hello, I am <span class="grad">Matees</span></h1>
 				<p>I am a <span class="grad">15 year old</span> who does things on the computer which include, browsing, viewing, <br>typing, listening,
 					and much more! I love <span class="grad">long walks on the beach</span>, I am absolutely <br> ripped with 
-					muscle, and <span class="grad">I am 6'2"</span>.
+					muscle, and <span class="grad">I am 6'2"</span>. I am a proud 
+					<span class="grad">Fighting Hornet</span> (Herndon High School).
 				</p>
 			</div>
 
